<resources>
    <string name="app_name">Stoic Reading</string>
    <string name="action_settings">Settings</string>
    <string name="Musonius_Rufus">"Musonius Rufus"</string>
    <string name="Hierocles">"Hierocles"</string>
    <string name="Marcus_Aurelius">"Marcus Aurelius"</string>
    <string name="Seneca">"Seneca"</string>
    <string name="Epictetus">"Epictetus"</string>
    <string name="RufusLecTitle">"Lectures"</string>
    <string name="HieroclesFragmentsTitle">"Fragments"</string>
    <string name="RufusLecturesTitle1">"1. That there is no need of giving many proofs for one problem."</string>
    <string name="RufusLecturesTitle2">"2. That man is born with an inclination towards virtue."</string>
    <string name="RufusLecturesTitle3">"3. That women too should study philosophy."</string>
    <string name="RufusLecturesTitle4">"4. Should daughters receive the same training as sons?"</string>
    <string name="RufusLecturesTitle5">"5. Which is more effective, theory or practice?"</string>
    <string name="RufusLecturesTitle6">"6. On training"</string>
    <string name="RufusLecturesTitle7">"7. That one should disdain hardships."</string>
    <string name="RufusLecturesTitle8">"8. That kings also should study philosophy."</string>
    <string name="RufusLecturesTitle9">"9. That exile is not an evil."</string>
    <string name="RufusLecturesTitle10">"10. Will the philosopher prosecute anyone for personal injury?"</string>
    <string name="RufusLecturesTitle11">"11. What means of livelihood are appropriate for a philosopher?"</string>
    <string name="RufusLecturesTitle12">"12. On sexual indulgence."</string>
    <string name="RufusLecturesTitle13A">"13A. What is the Chief End of Marriage?"</string>
    <string name="RufusLecturesTitle13B">"13B. What is the Chief End of Marriage?"</string>
    <string name="RufusLecturesTitle14">"14. Is marriage a handicap for the pursuit of philosophy?"</string>
    <string name="RufusLecturesTitle15">"15. Should every child that is born be raised?"</string>
    <string name="RufusLecturesTitle16">"16. Must one obey one's parents under all circumstances?"</string>
    <string name="RufusLecturesTitle17">"17. What is the best viaticum for old age?"</string>
    <string name="RufusLecturesTitle18A">"18A. On food"</string>
    <string name="RufusLecturesTitle18B">"18B. On food"</string>
    <string name="RufusLecturesTitle19">"19. On clothing and shelter"</string>
    <string name="RufusLecturesTitle20">"20. On furnishings"</string>
    <string name="RufusLecturesTitle21">"21. On cutting the hair"</string>
    <string name="HieroclesFragmentsTitle1">How we ought to conduct ourselves towards the gods</string>
    <string name="HieroclesFragmentsTitle2">How we ought to conduct ourselves towards our country</string>
    <string name="HieroclesFragmentsTitle3">After what manner we ought to conduct ourselves towards our parents</string>
    <string name="HieroclesFragmentsTitle4">On fraternal love</string>
    <string name="HieroclesFragmentsTitle5">On wedlock</string>
    <string name="HieroclesFragmentsTitle6">How we ought to conduct ourselves towards our kindred</string>
    <string name="HieroclesFragmentsTitle7">On economics</string>
    <string name="RufusLectures_Lec1">"1. Once when discussion turned upon proofs or demonstrations, such as beginners must learn from their teachers of philosophy in gaining a mastery of whatever they are studying, Musonius said that there was no sense in seeking many proofs for each point, but rather cogent and lucid ones. Thus just as the physician who prescribes many drugs for his patients deserves less praise than the one who succeeds in helping them with a few, so the philosopher who teaches his pupils with the use of many proofs is less effective than the one who leads them to the desired goal with few. And the pupil too, the quicker his intelligence, the fewer proofs he will require, and the sooner he will assent to the conclusion of the argument in question, provided it be sound. But those who require proofs at every point, even where the matter is perfectly clear, or demand to have demonstrated at length things which could be explained briefly are completely inept and dull-witted.\n\n2. The gods, we may assume, need no proof of anything inasmuch as nothing to them lacks clearness or is obscure, and it is only in reference to obscurity that there is any need of proof. Man, however, must needs seek to find out that which is not plain nor self-evident through the medium of the plain and obvious. That is the function of proof. Take for example the proposition that pleasure is not a good. At first sight we do not recognize it as true, since in fact pleasure appeals to us as a good. But starting from the generally accepted premise that every good is desirable and adding to it a second equally accepted that some pleasures are not desirable, we succeed in proving that pleasure is not a good: that is we prove the unknown or unrecognized by means of the known or recognized. Or again, that toil is not an evil is not on the face of it a persuasive proposition, while its opposite, that toil is an evil, seems much more persuasive. But starting from the known and accepted premise that every evil is a thing to be avoided, and adding to it another obvious one, namely that many forms of toil are not in the category of things to be avoided, we conclude that toil is not an evil.\n\n3. Since this, then, is the nature of proof, when we consider that some men are quicker of wit and others duller, that some are reared in better environment, others in worse, those of the latter class being inferior in character and native disposition will require more proofs and more diligent attention to be led to master the teachings in question and to be moulded by them; just as defective physiques, when the goal is to restore perfect health, require very diligent and prolonged treatment.\n\n4. On the other hand such pupils as are of a finer nature and have enjoyed better training will more easily and more quickly, and with few proofs, assent to sound reasoning and put it into practice. How true this is we may readily recognize if we chance to know two lads or young men, of whom one has been reared in luxury, his body effeminate, his spirit weakened by soft living, and having besides a dull and torpid disposition; the other reared somewhat in the Spartan manner, unaccustomed to luxury, practiced in self-restraint, and ready to listen to sound reasoning. If then we place these two young men in the position of pupils of a philosopher arguing that death, toil, poverty, and the like are not evils, or again that life, pleasure, wealth, and the like are not goods, do you imagine that both will give heed to the argument in the same fashion, and that one will be persuaded by it in the same degree as the other? Far from it.\n\n5. The one reluctantly and slowly, and fairly pried loose by a thousand arguments, will perhaps in the end give sign of assent—I mean of course the dullard. The other quickly and readily will accept the argument as cogent and relevant to himself, and will not require many proofs nor a fuller treatment. Was not just such a lad that Spartan boy who asked Cleanthes the philosopher if toil was not a good? He made it plain that he was so well-endowed by nature and by training for the practice of virtue as to consider toil closer to the nature of good than of evil, in that he asked whether toil was not perchance a good, as if it were conceded that it was not an evil. Thereupon Cleanthes in surprise and admiration of the boy replied,\n\n\"Thou art of noble blood, dear child, so noble the words thou speakest.\"\n\nCan you doubt that such a lad would have been readily persuaded not to fear poverty nor death nor any of the things which seem terrible, and again, not to seek after wealth nor life nor pleasure?\n\n6. To come back to the starting point of my discussion, I repeat that it is mistaken zeal for the teacher, if he be a true philosopher, to rehearse a multitude of arguments and proofs to his pupils. He should rather touch upon each one with just measure, seek to penetrate to the very intellect of his hearer, and present persuasive arguments and such as cannot easily be refuted. But most of all his treatment should consist in showing himself not only as one who utters words which are most helpful, but as one who acts consistently with them. As for the pupil, it is his duty to attend diligently to what is said and to be on his guard lest he accept unwittingly something false. But of what he accepts as truth, his effort should not be directed toward learning numbers of proofs—far from it—but only such as are plain and lucid. Finally whatever precepts enjoined upon him he is persuaded are true, these must he follow out in his daily life. For only in this way will philosophy be of profit to anyone, if to sound teaching he adds conduct in harmony with it."</string>
</resources>