<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RufusLectures.LecHome">

            <Button
                android:id="@+id/rufus_lec_1"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/RufusLecturesTitle1"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/rufus_lec_2"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle2"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="33dp" />

            <Button
                android:id="@+id/rufus_lec_3"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle3"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="16dp" />

            <Button
                android:id="@+id/rufus_lec_4"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle4"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="74dp" />

            <Button
                android:id="@+id/rufus_lec_5"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle5"
                tools:layout_editor_absoluteX="119dp"
                tools:layout_editor_absoluteY="74dp" />

            <Button
                android:id="@+id/rufus_lec_6"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle6"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="74dp" />

            <Button
                android:id="@+id/rufus_lec_7"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle7"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="146dp" />

            <Button
                android:id="@+id/rufus_lec_8"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle8"
                tools:layout_editor_absoluteX="119dp"
                tools:layout_editor_absoluteY="146dp" />

            <Button
                android:id="@+id/rufus_lec_9"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle9"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="146dp" />

            <Button
                android:id="@+id/rufus_lec_10"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle10"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="202dp" />

            <Button
                android:id="@+id/rufus_lec_11"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle11"
                tools:layout_editor_absoluteX="119dp"
                tools:layout_editor_absoluteY="202dp" />

            <Button
                android:id="@+id/rufus_lec_12"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle12"
                tools:layout_editor_absoluteX="226dp"
                tools:layout_editor_absoluteY="202dp" />

            <Button
                android:id="@+id/rufus_lec_13A"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle13A"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="257dp" />

            <Button
                android:id="@+id/rufus_lec_13B"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_13A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle13B"
                tools:layout_editor_absoluteX="110dp"
                tools:layout_editor_absoluteY="257dp" />

            <Button
                android:id="@+id/rufus_lec_14"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_13B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle14"
                tools:layout_editor_absoluteX="219dp"
                tools:layout_editor_absoluteY="270dp" />

            <Button
                android:id="@+id/rufus_lec_15"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle15"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="318dp" />

            <Button
                android:id="@+id/rufus_lec_16"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle16"
                tools:layout_editor_absoluteX="110dp"
                tools:layout_editor_absoluteY="318dp" />

            <Button
                android:id="@+id/rufus_lec_17"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle17"
                tools:layout_editor_absoluteX="226dp"
                tools:layout_editor_absoluteY="325dp" />

            <Button
                android:id="@+id/rufus_lec_18A"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle18A"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="383dp" />

            <Button
                android:id="@+id/rufus_lec_18B"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_18A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle18B"
                tools:layout_editor_absoluteX="110dp"
                tools:layout_editor_absoluteY="373dp" />

            <Button
                android:id="@+id/rufus_lec_19"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_18B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle19"
                tools:layout_editor_absoluteX="226dp"
                tools:layout_editor_absoluteY="383dp" />

            <Button
                android:id="@+id/rufus_lec_20"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle20"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="446dp" />

            <Button
                android:id="@+id/rufus_lec_21"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_lec_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RufusLecturesTitle21"
                tools:layout_editor_absoluteX="119dp"
                tools:layout_editor_absoluteY="446dp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>