<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/rufus_button"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Musonius_Rufus"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/hierocles_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rufus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hierocles"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/aurelius_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/hierocles_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Marcus_Aurelius"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/seneca_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/aurelius_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Seneca"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/epictetus_button"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/seneca_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Epictetus"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="5dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>